...
        return label
    }()

    // buy button
    private let buyButton: UIButton = {
        let button = UIButton()
        button.setTitle("Buy", for: .normal)
        button.backgroundColor = .systemPink
        button.layer.cornerRadius = 10
        button.addTarget(self, action: #selector(buyButtonTapped), for: .touchUpInside)
        return button
    }()

...
        refreshControl.endRefreshing()
    }

    @objc func buyButtonTapped() {
        // show alert 
        let alert = UIAlertController(title: "Buy", message: "Do you want to buy all items?", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { _ in
            // delete all products
            Product.deleteAllProducts()
            self.shoppingVM.shoppingCart.removeAll()
            self.reloadData()
            Drops.show(self.drop)
        }))
...
